plugins {
    id 'java-library'
    id 'maven-publish'
    id 'checkstyle'
}

repositories {
    mavenCentral()
    mavenLocal()
}

apply from: '../opencadc.gradle'

sourceCompatibility = 11

group = 'org.opencadc'

version = '1.2.28'

description = 'OpenCADC DALI library'
def git_url = 'https://github.com/opencadc/dal'

dependencies {
    implementation 'net.sourceforge.javacsv:javacsv:2.0'

    // Added for its Base64InputStream implementation.
    implementation 'commons-codec:commons-codec:1.15'

    implementation 'org.opencadc:cadc-util:[1.12.0,)'
    implementation 'org.opencadc:cadc-uws:[1.0.4,)'

    testImplementation 'junit:junit:[4.0,5.0)'
    testImplementation 'xerces:xercesImpl:[2.0,3.0)'
}

// exclude unmanaged sources from checkstyle and javadoc
checkstyleMain
        .exclude('uk/ac/starlink/table/*.java')
        .exclude('uk/ac/starlink/util/*.java')
        .exclude('uk/ac/starlink/votable/*.java')

javadoc
        .exclude('uk/ac/starlink/table/*.java')
        .exclude('uk/ac/starlink/util/*.java')
        .exclude('uk/ac/starlink/votable/*.java')
